[project]
name = "strands-sap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aioboto3>=15.5.0",
    "boto3>=1.40.61",
    "ddgs",
    "sap-ai-sdk-gen[all]>=5.11.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "strands-agents>=1.26.0",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.2.20",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
    "tavily-python",
]